# vins-mono

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  compile_commands.json  log.h  run_me.sh  xmake.lua
3rd/patch/Boost/: 0001-build.patch
3rd/patch/Ceres/: 0001-build.patch
3rd/patch/DBoW2/: 0001-build.patch
3rd/patch/DLib/: 0001-build.patch
3rd/patch/Eigen3/: 0001-build.patch
3rd/patch/gflags/: 0001-build.patch
3rd/patch/glog/: 0001-build.patch
3rd/patch/opencv/: 0001-build.patch
ar_demo/src/: ar_demo_node.cpp
benchmark_publisher/src/: benchmark_publisher_node.cpp
camera_model/: CMakeLists.txt
camera_model/include/camodocal/gpl/: EigenQuaternionParameterization.h
camera_model/src/calib/: CameraCalibration.cc
doc/: 思路说明
feature_tracker/: CMakeLists.txt
feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  parameters.cpp  parameters.h
kitti_demo/: main.cpp
pose_graph/: CMakeLists.txt
pose_graph/src/: keyframe.cpp  keyframe.h  parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
pose_graph/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  utility.h
scripts/: apply_patchs.py  build_library.py  build_third_libs.py  cmake_options.py  compilt_third_libs.py  raw_data_downloader.sh
src/impl/: camera_wrapper.h  feature_helper.cpp  feature_tracker.h  imu_integrator.h  vins_core.cpp  vins_define_internal.h
src/impl/front_end_optimize/: front_end_optimize.cpp  front_end_optimize.h
src/impl/front_end_optimize/cost_functions/: imu_cost.cpp  marginal_cost.cpp  project_cost.cpp  project_td_cost.cpp  project_td_cost.h
src/impl/initial/: initiate.h
src/impl/initial/impl/: visual_inertial_aligner.h  visual_initiator.cpp  visual_initiator.h
src/impl/loop_closer/: keyframe.cpp  keyframe.h  loop_closer.cpp  loop_closer.h
src/impl/loop_closer/impl/: loop_relative_pos.cpp
src/vins/: batch_adjuster.cpp  batch_adjuster.h  camera_wrapper.h  feature_helper.cpp  feature_helper.h  feature_manager.cpp  feature_manager.h  feature_tracker.cpp  feature_tracker.h  imu_integrator.cpp  imu_integrator.h  motion_estimator.cpp  motion_estimator.h  param.h  parameters.h  ric_estimator.cpp  ric_estimator.h  rotation_extrinsic_estimator.cpp  rotation_extrinsic_estimator.h  vins_core.cpp  vins_core.h  vins_define_internal.h  vins_logic.cpp  vins_logic.h  vins_run_info.h  vins_utils.h  visual_inertial_aligner.cpp  visual_inertial_aligner.h  visual_initiator.cpp
src/vins/camera_model/: CMakeLists.txt
src/vins/camera_model/include/camodocal/gpl/: EigenQuaternionParameterization.h
src/vins/camera_model/src/calib/: CameraCalibration.cc
src/vins/camera_model/src/camera_models/: EquidistantCamera.cc
src/vins/camera_model/src/gpl/: EigenQuaternionParameterization.cc
src/vins/ceres_cost_function_factor/: imu_factor.cpp  imu_factor.h  marginal_factor.cpp  marginal_factor.h  projection_td_factor.cpp  projection_td_factor.h
src/vins/impl/: camera_wrapper.h  feature_helper.cpp  feature_helper.h  feature_tracker.cpp  feature_tracker.h  imu_integrator.cpp  imu_integrator.h  vins_core.cpp  vins_core.h  vins_define_internal.h  vins_run_info.h  vins_utils.h
src/vins/impl/front_end/: front_end.cpp
src/vins/impl/initial/: initiate.cpp  (+1 more)
src/vins/initial/: initiate.cpp  initiate.h  visual_initiator.h
src/vins/loop_closer/: keyframe.cpp  keyframe.h  loop_closer.cpp  loop_closer.h  match_frame.cpp
src/vins/slide_window_estimator/: slide_window_estimator.cpp  slide_window_estimator.h
src/vins/src/: imu_integrator.cpp  imu_integrator.h  motion_estimator.cpp  vins_utils.h  visual_initiator.cpp
vins/: CMakeLists.txt  param.h  vins.cmake.in  vins_logic.cpp  vins_logic.h
vins/impl/: camera_wrapper.h  feature_helper.cpp  feature_helper.h  feature_tracker.cpp  feature_tracker.h  imu_integrator.cpp  imu_integrator.h  vins_controller.cpp  vins_controller.h  vins_core.cpp  vins_core.h  vins_define_internal.h  vins_model.h  vins_run_info.h  vins_utils.h
vins/impl/front_end_optimize/: front_end_optimize.cpp  front_end_optimize.h
vins/impl/front_end_optimize/cost_functions/: imu_cost.cpp  imu_cost.h  project_cost.cpp  project_cost.h  project_td_cost.cpp  project_td_cost.h
vins/impl/initial/: initiate.cpp  initiate.h
vins/impl/initial/impl/: visual_inertial_aligner.cpp  visual_inertial_aligner.h  visual_inertial_aligner_test.cpp  visual_initiator.cpp  visual_initiator.h
vins/impl/loop_closer/: keyframe.cpp  keyframe.h  loop_closer.cpp  loop_closer.h
vins/impl/loop_closer/impl/: loop_detector.cpp  loop_detector.h  loop_relative_pos.cpp  loop_relative_pos.h
vins/src/: batch_adjuster.cpp  batch_adjuster.h  extrinsic_estimator.cpp  extrinsic_estimator.h  feature_manager.cpp  feature_manager.h  imu_integrator.cpp  imu_integrator.h  motion_estimator.cpp  motion_estimator.h  rotation_extrinsic_estimator.cpp  rotation_extrinsic_estimator.h  utils.cpp  utils.h  vins_core.cpp  vins_core.h  vins_define_internal.h  vins_utils.cpp  visual_inertial_aligner.cpp  visual_initiator.cpp  visual_initiator.h
vins/src/ceres_cost_function_factor/: imu_factor.cpp  imu_factor.h  marginal_factor.cpp
vins/src/loop_closer/: keyframe.cpp  keyframe.h  loop_closer.cpp  loop_closer.h  match_frame.cpp
vins/src/pose_graph/: keyframe.cpp  keyframe.h  pose_graph.h
vins_estimator/: CMakeLists.txt
vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: imu_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h  projection_factor.cpp  projection_factor.h  projection_td_factor.cpp  projection_td_factor.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
vins_estimator/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  utility.h  visualization.cpp  visualization.h
(+67 files in other folders)
