cmake_minimum_required (VERSION 3.6)

set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}" CACHE PATH "Installation directory" FORCE)
message(STATUS "CMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}")
enable_language(CXX)
set(CMAKE_BUILD_TYPE "Release")
set(CMAKE_CXX_FLAGS "-std=c++17")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -g")

project (vins)

#set(CMAKE_VERBOSE_MAKEFILE on)
set(SELF_LIBS_OUT ${CMAKE_SYSTEM_NAME}.out)

include_directories(~/vins/Sophus)
include_directories(~/vins/VINS-Mono)
include_directories(~/vins/boost_1_81_0)
include_directories(~/vins/ceres-solver/include)
include_directories(~/vins/eigen-3.4.0)
include_directories(~/vins/gflags)
include_directories(~/vins/glog)
include_directories(/usr/local/include/)
include_directories(~/vins/)
include_directories(~/vins/VINS-Mono/camera_model/include/)
include_directories(~/vins/opencv-3.4/include)

add_subdirectory(camera_model camera_model)
add_subdirectory(feature_tracker feature_tracker)
add_subdirectory(pose_graph pose_graph)
add_subdirectory(vins_estimator vins_estimator)
